--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="js/class/Person.js" defer></script>
     <script src="js/class/Employee.js" defer></script>
     <script src="js/main.js" defer></script>
+    <script src="js/class/Partner.js" defer></script>
+    <script src="js/class/Project.js" defer></script>
 </head>
 
 <body>
