--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OOP</title>
     <script src="js/class/Person.js" defer></script>
-    <script src="js/class/Employee.js" defer></script>
-    <script src="js/main.js" defer></script>
+    <script src="js/class/Emploee.js" defer></script>
     <script src="js/class/Partner.js" defer></script>
     <script src="js/class/Project.js" defer></script>
+    <script src="js/main.js" defer></script>
 </head>
 
 <body>
